--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"manifest_version": 2,
-	"name": "URL",
+	"name": "Soter",
 	"description": "Detecting and Blocking malicious IP",
 	"version": "1.16.1",
-    "author": "github.com/maxisme",
+    "author": "github.com/CTA-G-16",
 	"background": {
 		"scripts": ["background.js","background1.js"],
 		"persistent": true
@@ -35,6 +35,6 @@
 	"browser_action": {
 		"default_icon": "/icon/blue(32).png",
 		"default_popup": "/html/popup.html",
-		"default_title": "URL"
+		"default_title": "Soter"
 	}
 }
